--- a/MyCity4Kids/MyCity4Kids/res/layout/kids_info_new_custom_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/kids_info_new_custom_view.xml
@@ -5,7 +5,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/kids_info_bg"
+        android:paddingBottom="16dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingTop="16dp">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/editKidsInfoTextView"
