--- a/MyCity4Kids/MyCity4Kids/res/drawable/email_login_button_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/email_login_button_bg.xml
@@ -2,14 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/topic_articles.sub_sub_topics_selected_border" />
+        android:color="@color/app_blue" />
 
-    <solid android:color="@color/white_color" />
+    <solid android:color="@color/app_blue" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
-    <corners android:radius="3dp" />
+
+    <corners android:radius="2dp" />
 
 </shape>
