--- a/MyCity4Kids/MyCity4Kids/res/drawable/mainprofile_thin_border.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/mainprofile_thin_border.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#A9A9A9" />
-    <corners android:radius="5dp" />
+        android:color="@color/light_underline" />
+    <corners android:radius="2dp" />
     <solid android:color="@color/white" />
 
 </shape>
