--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="#f9f9f9">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -11,7 +11,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="0dp">
 
