--- a/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
@@ -93,7 +93,7 @@
                 android:layout_marginTop="22dp"
                 android:background="@drawable/button_round"
                 android:gravity="center"
-                android:text="EDIT"
+                android:text="@string/edit"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:fontName="oswald_regular.ttf" />
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
-            android:text="CELL NO"
+            android:text="@string/app_settings.edit_profile.hint_phone"
             android:textColor="@color/app_grey"
             app:fontName="oswald_regular.ttf" />
 
