--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
-            android:text="About"
+            android:text="@string/about_txt"
             android:textColor="@color/app_light_black"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
@@ -31,7 +31,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="3dp"
-            android:background="@drawable/mainprofile_thin_border"
+            android:background="@drawable/about_user_bg"
             android:gravity="top"
             android:hint="@string/write_about_yourself"
             android:inputType="textMultiLine"
@@ -59,7 +59,6 @@
             android:id="@+id/childInfoContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F9F9F9"
             android:orientation="vertical">
 
         </LinearLayout>
